// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> rendering with children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <TextBody>
        Some label
      </TextBody>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={true}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked when indeterminate should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when indeterminate should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when unchecked should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children with \`data-*\` should match snapshot 1`] = `
<div
  data-test="foo-attribute-select-me-from-e2e"
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;
